消息队列修改
Co-authored-by: Cursor <cursoragent@cursor.com>